--- a/src/scss/components/_common.scss
+++ b/src/scss/components/_common.scss
@@ -30,7 +30,7 @@
   font-weight: 400;
   font-size: var(--fs-0-5);
   color: var(--light-color);
-  // background-color: var(--dark-color);
+  background-color: var(--dark-color);
 }
 
 .offset-container {
