--- a/src/scss/components/_scrollbars.scss
+++ b/src/scss/components/_scrollbars.scss
@@ -46,7 +46,7 @@
   .profile-tabs__container::-webkit-scrollbar-thumb,
   .chat-opponent::-webkit-scrollbar-thumb,
   .content__plans::-webkit-scrollbar-thumb {
-    background-color: var(--olive-light);
+    background-color: var(--plan-color, var(--olive-light));
     border: 1px solid var(--bd-sign-in);
     border-radius: 10px;
   }
